# cria

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
cria/: cria.py
src/: cria.py
test/: test_current.py  test_custom_message_history.py  test_interrupt_chat.py  test_interrupt_generate.py  test_quickstart.py  test_quickstart_configurable.py
tests/: main.py
