[project]
name = "cria"
version = "1.4.0"
authors = [{ name = "leftmove", email = "100anonyo@gmail.com" }]
description = "Run AI locally with as little friction as possible"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/leftmove/cria"
Issues = "https://github.com/leftmove/cria/issues"

[tool.poetry]
name = "cria"
version = "1.4.0"
description = "Run AI locally with as little friction as possible."
authors = ["leftmove"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ollama = "^0.1.8"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
